Add ionic config to run  in mobile phone

--- a/src/app/welcomescreen/welcomescreen.component.html
+++ b/src/app/welcomescreen/welcomescreen.component.html
@@ -1,3 +1,6 @@
-<p>
-  welcomescreen works!
-</p>
+<ion-content [fullscreen]="true" class="ion-padding">
+  <p>
+    Hi i am vijay amamrnath
+
+  </p>
+</ion-content>
