change scss to css  project

--- a/src/app/welcomescreen/welcomescreen.component.html
+++ b/src/app/welcomescreen/welcomescreen.component.html
@@ -1,6 +1,5 @@
 <ion-content [fullscreen]="true" class="ion-padding">
   <p>
-    Hi i am vijay amamrnath
-
+    Hi i am vijay amamrnath .
   </p>
 </ion-content>
