--- a/src/global.css
+++ b/src/global.css
@@ -9,4 +9,69 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
+:root {
+    --ion-color-primary: #2196f3;
+    --ion-color-primary-rgb: 33, 150, 243;
+    --ion-color-primary-contrast: #000000;
+    --ion-color-primary-contrast-rgb: 0, 0, 0;
+    --ion-color-primary-shade: #1d84d6;
+    --ion-color-primary-tint: #37a1f4;
+
+    --ion-color-secondary: #03a9f4;
+    --ion-color-secondary-rgb: 3, 169, 244;
+    --ion-color-secondary-contrast: #000000;
+    --ion-color-secondary-contrast-rgb: 0, 0, 0;
+    --ion-color-secondary-shade: #0395d7;
+    --ion-color-secondary-tint: #1cb2f5;
+
+    --ion-color-tertiary: #ff7043;
+    --ion-color-tertiary-rgb: 255, 112, 67;
+    --ion-color-tertiary-contrast: #000000;
+    --ion-color-tertiary-contrast-rgb: 0, 0, 0;
+    --ion-color-tertiary-shade: #e0633b;
+    --ion-color-tertiary-tint: #ff7e56;
+
+    --ion-color-success: #4caf50;
+    --ion-color-success-rgb: 76, 175, 80;
+    --ion-color-success-contrast: #000000;
+    --ion-color-success-contrast-rgb: 0, 0, 0;
+    --ion-color-success-shade: #439a46;
+    --ion-color-success-tint: #5eb762;
+
+    --ion-color-warning: #ffeb3b;
+    --ion-color-warning-rgb: 255, 235, 59;
+    --ion-color-warning-contrast: #000000;
+    --ion-color-warning-contrast-rgb: 0, 0, 0;
+    --ion-color-warning-shade: #e0cf34;
+    --ion-color-warning-tint: #ffed4f;
+
+    --ion-color-danger: #e53935;
+    --ion-color-danger-rgb: 229, 57, 53;
+    --ion-color-danger-contrast: #000000;
+    --ion-color-danger-contrast-rgb: 0, 0, 0;
+    --ion-color-danger-shade: #ca322f;
+    --ion-color-danger-tint: #e84d49;
+
+    --ion-color-light: #e3f2fd;
+    --ion-color-light-rgb: 227, 242, 253;
+    --ion-color-light-contrast: #000000;
+    --ion-color-light-contrast-rgb: 0, 0, 0;
+    --ion-color-light-shade: #c8d5df;
+    --ion-color-light-tint: #e6f3fd;
+
+    --ion-color-medium: #90a4ae;
+    --ion-color-medium-rgb: 144, 164, 174;
+    --ion-color-medium-contrast: #000000;
+    --ion-color-medium-contrast-rgb: 0, 0, 0;
+    --ion-color-medium-shade: #7f9099;
+    --ion-color-medium-tint: #9badb6;
+
+    --ion-color-dark: #263238;
+    --ion-color-dark-rgb: 38, 50, 56;
+    --ion-color-dark-contrast: #ffffff;
+    --ion-color-dark-contrast-rgb: 255, 255, 255;
+    --ion-color-dark-shade: #212c31;
+    --ion-color-dark-tint: #3c474c;
+
+}
 
