--- a/src/app/timeview/timeview.component.html
+++ b/src/app/timeview/timeview.component.html
@@ -1,11 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title
-      style="color: black;font-size: 1.5rem;align-items: center;justify-content: center;display: flex;font-weight: bold;">
+    <ion-title class="center-title">
       {{date}} </ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content class="ion-padding" [fullscreen]="true">
+<ion-content class="ion-padding">
   @for (item of hours; track $index) {
   <ion-card>
     <ion-card-content>
