--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -107,8 +107,8 @@
     <!-- Forecast Slider -->
     <ion-row *ngIf="daysData?.length > 0">
       <ion-col>
-        <ion-text color="primary">
-          <h3 style="margin-left: 16px;">5-Day Forecast</h3>
+        <ion-text>
+          <h3 style="margin-left: 16px;">7-Day Forecast</h3>
         </ion-text>
 
         <swiper-container slides-per-view="2" [loop]="true" [autoplay]="{ delay: 2000, disableOnInteraction: false }">
