Added some ui changes and make gelocation on

--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -56,7 +56,7 @@
               </h1>
             </ion-text>
 
-            <ion-text color="medium">
+            <ion-text>
               <p style="font-size: 1.2rem; text-transform: capitalize; margin: 0.5rem 0;">
                 {{ currentData?.conditions || '--' }}
               </p>
