--- a/src/app/timeview/timeview.component.html
+++ b/src/app/timeview/timeview.component.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/main-page" style="color: black;"></ion-back-button>
+    </ion-buttons>
     <ion-title class="center-title">
       {{date}} </ion-title>
   </ion-toolbar>
